--- a/index.html
+++ b/index.html
@@ -9,29 +9,42 @@
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="responsive.css" />
   <title>Bankist | When Banking meets Minimalist</title>
   <script defer src="script.js"></script>
 </head>
 
 <body>
   <header class="header">
-    <nav class="nav">
+
+    <div class="header__nav ">
       <img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" />
-      <ul class="nav__links">
-        <li class="nav__item">
-          <a class="nav__link" href="#section--1">Features</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#section--2">Operations</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#section--3">Testimonials</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link nav__link--btn btn--show-modal" href="#">Open account</a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+
+
+
+        <ul class="nav__links">
+          <li class="nav__item">
+            <a class="nav__link" href="#section--1">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#section--2">Operations</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#section--3">Testimonials</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link nav__link--btn btn--show-modal" href="#">Open account</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="btn-mobile-nav">
+        <svg class="btn-mobile btn-mobile--menu">
+          <use xlink:href="img/icons.svg#icon-menu"></use>
+        </svg>
+        <img class="btn-mobile btn-mobile--close" src="img/close-outline.svg" />
+      </button>
+    </div>
 
     <div class="header__title">
       <h1>
